# Projeto

./: Dockerfile  Dockerfile (1)  README.md  docker-compose (1).yaml  docker-compose.yaml  pyproject.toml  requirements.txt
aluno/: admin.py  forms.py  models.py  views.py
aluno/fixtures/: dados_iniciais.json
aluno/migrations/: 0001_initial.py  0002_cliente_bairro_cliente_mae.py  0003_remove_cliente_bairro_remove_cliente_mae.py  0004_alter_usuariocustomizado_cpf.py  0005_delete_professor.py  0006_cliente_usuario_alter_cliente_cidade_and_more.py
aluno/templates/agendamento/: agendamentos.html  detalhes.html  form.html
aluno/templates/busca/: resultados.html
aluno/templates/cidade/: cidade_listar.html
aluno/templates/cliente/: agendamento_listar.html  clientes.html  index.html
aluno/templates/medico/: medico_detalhes.html  medicos.html
aluno/templates/senha/: password_reset_complete.html  password_reset_done.html
aluno/templates/usuarios/: cadastrar.html  login.html  perfil.html
clinica/: apps.py  forms.py
clinica/fixtures/: dados_iniciais.json
clinica/migrations/: 0001_initial.py  0002_cliente_bairro_cliente_mae.py  0003_remove_cliente_bairro_remove_cliente_mae.py  0004_alter_usuariocustomizado_cpf.py  0005_delete_professor.py  0006_cliente_usuario_alter_cliente_cidade_and_more.py
clinica/templates/cliente/: cliente_detalhar.html  form.html
clinica/templates/medico/: form.html
clinica/templates/senha/: password_reset.html  password_reset_confirm.html
compose/django/: start
main/: settings.py  urls.py
templates/: auth_base.html  base.html
(+1 files in other folders)
